# bts-bdp-assignment

./: .gitignore  Makefile  README.adoc  README.md  bdi-docker-aws_ec2(mongo).pem  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bdi_api/: app.py  settings.py  tree.txt
bdi_api/examples/: __init__.py
bdi_api/s1/: README.adoc  exercise.py
bdi_api/s4/: README.adoc  exercise.py  requirements.txt
bdi_api/s5/: arquitecture.txt  exercise.py
bdi_api/s6/: docker-compose.yml  exercise.py
bdi_api/s7/: exercise.py
bdi_api/s8/: exercise.py
bdi_api/s8/dags/: s8_aircraft_pipeline.py
bdi_api/s9/: exercise.py
docker/: Dockerfile
tests/: conftest.py
tests/examples/: test_examples.py
tests/s1/: test_s1.py
tests/s4/: test_s4_endpoints.py
